tests/sumo/pedestrian_model/nonInteracting/errors/testsuite.sumo
disconnected_trip

# Copy of disconnected_trip
disconnected_trip_ignore
disconnected_route

# Copy of disconnected_route
disconnected_route_ignore

# Copy of route_invalid_permissions
route_invalid_permissions
